DFHack future

  Internals:
    - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).

  New commands:
    - move the 'grow', 'extirpate' and 'immolate' commands as 'plant' subcommands
    - 'plant create' - spawn a new shrub under the cursor

  Misc improvements:
    - digfort: improved csv parsing, add start() comment handling

DFHack v0.34.11-r4

  New commands:
    - diggingInvaders - allows invaders to dig and/or deconstruct walls and buildings in order to get at your dwarves.
    - digFlood - automatically dig out specified veins as they are revealed
    - enable, disable - Built-in commands that can be used to enable/disable many plugins.
    - restrictice - Restrict traffic on squares above visible ice.
    - restrictliquid - Restrict traffic on every visible square with liquid.
    - treefarm - automatically chop trees and dig obsidian
  New scripts:
    - autobutcher: A GUI front-end for the autobutcher plugin.
    - invasionNow: trigger an invasion, or many
    - locate_ore: scan the map for unmined ore veins
    - masspit: designate caged creatures in a zone for pitting
    - multicmd: run a sequence of dfhack commands, separated by ';'
    - startdwarf: change the number of dwarves for a new embark
    - digmat: dig veins/layers tile by tile, as discovered
  Misc improvements:
    - autoSyndrome:
        disable by default
        reorganized special tags
        minimized error spam
        reset policies: if the target already has an instance of the syndrome you can skip, add another instance, reset the timer, or add the full duration to the time remaining
    - core: fix SC_WORLD_(UN)LOADED event for arena mode
    - exterminate: renamed from slayrace, add help message, add butcher mode
    - fastdwarf: fixed bug involving fastdwarf and teledwarf being on at the same time
    - magmasource: rename to 'source', allow water/magma sources/drains
    - ruby: add df.dfhack_run "somecommand"